# plasma-potd-spotlight

./: .gitignore  CMakeLists.txt  README.md
cmake/: Utilities.cmake
src/: CMakeLists.txt  scoped_guard.h  spotlightprovider.cpp  spotlightprovider.h  spotlightprovider.json  spotlightprovider_plugin.cpp  unsplashprovider.cpp  unsplashprovider.h
tests/: CMakeLists.txt  catch2_qt.h  main.cpp  test_spotlightparser.cpp  test_spotlightprovider.cpp  test_spotlightprovider.h
